executable('scarface','main.cpp', 'SnifferPannel.cpp',
                          include_directories:['../includes'],
                          dependencies : [HighFive_lib, SciQLopPlots_dep, fft_dep, thread_dep, pico_wrapper_dep],
                          extra_files:['SnifferPannel.hpp','../includes/picowrapper.hpp', '../includes/buffer_recycler.hpp'])
